[package]
name = "fly-init"
version = "0.1.0"
authors = ["Jerome Gravel-Niquet <jeromegn@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.62"
nix = "0.19"
tokio = { version = "0.2", default-features = false, features = [
    "macros",
    "rt-core",
    "io-driver",
    "process",
    "io-util",
    "io-std",
] }
env_logger = "0.6.2"
log = "0.4.8"
serde_derive = "1.0.101"
serde = "1.0.101"
serde_json = "1.0.40"
futures = "0.3"
warp = "0.2"
procfs = "0.7.7"
rlimit = "0.3.0"
rtnetlink = "0.5.0"
ipnetwork = { version = "0.16.0", features = ["serde"] }
ifstructs = "0.1.1"
anyhow = "1.0.33"
thiserror = "1.0.21"
pin-project = "1.0.1"
os_pipe = "0.9.2"
tokio-vsock = "0.2.2"

[profile.release]
lto = true

[build-dependencies]
vergen = "3.1.0"

[patch.crates-io]
tokio-vsock = { git = "https://github.com/jeromegn/tokio-vsock.git", branch = "fix-io-errors" }
